Script de Clock e Calendar Commit + misc
Scripts secundários feitos, retirado o Bootstrap por ser desnecessário. +Algumas alterações pequenas.

--- a/client/index.html
+++ b/client/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planejamento Semanal</title>
-    <!-- Bootstrap CSS Only-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <!-- Bootstrap JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="assets/styles/style.css">
-    <script src="assets/scripts/clock.js" defer></script>
-    <script src="script.js" defer></script>
-</head>
-<body>
-    <header></header>
-    <main>
-        <section>
-        </section>
-    </main>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Planejamento Semanal</title>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="assets/styles/style.css">
+        <script src="assets/scripts/clock.js" defer></script>
+        <script src="assets/scripts/calendar.js" defer></script>
+        <script src="script.js" defer></script>
+    </head>
+    <body>
+        <header class="header">
+            <section class="header__menu">
+                <h1 class="header__menu--title">Planejamento Semanal</h1>
+                <p class="header__menu--text">Utilize o formulário para adicionar novas tarefas:</p>
+            </section>
+            <button class="header__button--save">Salvar LocalStorage</button>
+            <button class="header__button--exclude">Excluir LocalStorage</button>
+            <section class="header__clock">
+                <h2 class="header__clock--time" id="hour"></h2>
+                <p class="header__clock--day" id="calendar"></p>
+            </section>
+        </header>
+        <main>
+            <section>
+            </section>
+        </main>
+    </body>
 </html>
